minor fix for flickering font

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -4,7 +4,7 @@
        url('../fonts/edit-undo-brk-v2.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
        url('../fonts/edit-undo-line-v1.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 /* Override Bulma default font */
